# GambleLive

./: CMakeLists.txt  main.cpp
src/core/: config_manager.cpp  log_parser.cpp  log_parser.h  log_watcher.cpp  log_watcher.h  slot_tab_controller.cpp  slot_tab_controller.h
src/window/: infowidget.cpp  infowidget.h  mainwindow.cpp  mainwindow.h
ui/: infowidget.ui  mainwindow.ui
